@@ -48,7 +48,6 @@ import java.util.Map;
 import java.util.Set;
 import java.util.TreeSet;
 import java.util.function.Consumer;
-import java.util.stream.Collectors;
 
 import javax.inject.Inject;
 
@@ -234,7 +233,7 @@ public class SplitPackagesAuditTask extends DefaultTask {
             String lastPackageName = null;
             Set<String> currentClasses = null;
             boolean filterErrorsFound = false;
-            for (String fqcn : getParameters().getIgnoreClasses().get().stream().sorted().collect(Collectors.toList())) {
+            for (String fqcn : getParameters().getIgnoreClasses().get().stream().sorted().toList()) {
                 int lastDot = fqcn.lastIndexOf('.');
                 if (lastDot == -1) {
                     LOGGER.error("Missing package in classname in split package ignores: " + fqcn);
@@ -298,12 +297,13 @@ public class SplitPackagesAuditTask extends DefaultTask {
             if (Files.exists(root) == false) {
                 return;
             }
-            Files.walk(root)
-                .filter(p -> p.toString().endsWith(suffix))
-                .map(root::relativize)
-                .filter(p -> p.getNameCount() > 1) // module-info or other things without a package can be skipped
-                .filter(p -> p.toString().startsWith("META-INF") == false)
-                .forEach(classConsumer);
+            try (var paths = Files.walk(root)) {
+                paths.filter(p -> p.toString().endsWith(suffix))
+                    .map(root::relativize)
+                    .filter(p -> p.getNameCount() > 1) // module-info or other things without a package can be skipped
+                    .filter(p -> p.toString().startsWith("META-INF") == false)
+                    .forEach(classConsumer);
+            }
         }
 
         private static String getPackageName(Path path) {
