@@ -9,6 +9,7 @@ package org.elasticsearch.script.mustache;
 
 import com.github.mustachejava.MustacheFactory;
 
+import org.elasticsearch.script.GeneralScriptException;
 import org.elasticsearch.script.Script;
 import org.elasticsearch.script.TemplateScript;
 import org.elasticsearch.test.ESTestCase;
@@ -19,10 +20,12 @@ import org.junit.Before;
 import java.io.IOException;
 import java.io.StringWriter;
 import java.util.Collections;
-import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 
 import static org.hamcrest.Matchers.equalTo;
+import static org.hamcrest.Matchers.instanceOf;
+import static org.hamcrest.Matchers.startsWith;
 
 /**
  * Mustache based templating test
@@ -34,11 +37,11 @@ public class MustacheScriptEngineTests extends ESTestCase {
     @Before
     public void setup() {
         qe = new MustacheScriptEngine();
-        factory = new CustomMustacheFactory();
+        factory = CustomMustacheFactory.builder().build();
     }
 
     public void testSimpleParameterReplace() {
-        Map<String, String> compileParams = Collections.singletonMap("content_type", "application/json");
+        Map<String, String> compileParams = Map.of("content_type", "application/json");
         {
             String template = """
                 GET _search
@@ -61,8 +64,7 @@ public class MustacheScriptEngineTests extends ESTestCase {
                     }
                   }
                 }""";
-            Map<String, Object> vars = new HashMap<>();
-            vars.put("boost_val", "0.3");
+            Map<String, Object> vars = Map.of("boost_val", "0.3");
             String o = qe.compile(null, template, TemplateScript.CONTEXT, compileParams).newInstance(vars).execute();
             assertEquals("""
                 GET _search
@@ -108,9 +110,7 @@ public class MustacheScriptEngineTests extends ESTestCase {
                     }
                   }
                 }""";
-            Map<String, Object> vars = new HashMap<>();
-            vars.put("boost_val", "0.3");
-            vars.put("body_val", "\"quick brown\"");
+            Map<String, Object> vars = Map.of("boost_val", "0.3", "body_val", "\"quick brown\"");
             String o = qe.compile(null, template, TemplateScript.CONTEXT, compileParams).newInstance(vars).execute();
             assertEquals("""
                 GET _search
@@ -136,14 +136,117 @@ public class MustacheScriptEngineTests extends ESTestCase {
         }
     }
 
+    public void testChangingDelimiters() {
+        Map<String, String> compileParams = Map.of("content_type", "application/json");
+        {
+            String template = """
+                GET _search
+                {
+                  "query": {
+                    "match": {
+                      "content": "{{query_string}}"
+                    }
+                  },
+                  "highlight": {
+                    {{=<% %>=}}
+                    "pre_tags": [
+                      "{{{{"
+                    ],
+                    "post_tags": [
+                      "}}}}"
+                    ],
+                    <%={{ }}=%>
+                    "fields": {
+                      "content": {},
+                      "title": {}
+                    }
+                  }
+                }""";
+            Map<String, Object> vars = Map.of("query_string", "test");
+            String o = qe.compile(null, template, TemplateScript.CONTEXT, compileParams).newInstance(vars).execute();
+            assertEquals("""
+                GET _search
+                {
+                  "query": {
+                    "match": {
+                      "content": "test"
+                    }
+                  },
+                  "highlight": {
+                   \s
+                    "pre_tags": [
+                      "{{{{"
+                    ],
+                    "post_tags": [
+                      "}}}}"
+                    ],
+                   \s
+                    "fields": {
+                      "content": {},
+                      "title": {}
+                    }
+                  }
+                }""", o);
+        }
+    }
+
     public void testSimple() throws IOException {
         String templateString = """
             {"source":{"match_{{template}}": {}},"params":{"template":"all"}}""";
         XContentParser parser = createParser(JsonXContent.jsonXContent, templateString);
         Script script = Script.parse(parser);
-        TemplateScript.Factory compiled = qe.compile(null, script.getIdOrCode(), TemplateScript.CONTEXT, Collections.emptyMap());
+        TemplateScript.Factory compiled = qe.compile(null, script.getIdOrCode(), TemplateScript.CONTEXT, Map.of());
         TemplateScript TemplateScript = compiled.newInstance(script.getParams());
         assertThat(TemplateScript.execute(), equalTo("{\"match_all\":{}}"));
+    }
+
+    public void testDetectMissingParam() {
+        Map<String, String> scriptOptions = Map.ofEntries(Map.entry(MustacheScriptEngine.DETECT_MISSING_PARAMS_OPTION, "true"));
+
+        // fails when a param is missing and the DETECT_MISSING_PARAMS_OPTION option is set to true.
+        {
+            String source = "{\"match\": { \"field\": \"{{query_string}}\" }";
+            TemplateScript.Factory compiled = qe.compile(null, source, TemplateScript.CONTEXT, scriptOptions);
+            Map<String, Object> params = Collections.emptyMap();
+            GeneralScriptException e = expectThrows(GeneralScriptException.class, () -> compiled.newInstance(params).execute());
+            assertThat(e.getRootCause(), instanceOf(MustacheInvalidParameterException.class));
+            assertThat(e.getRootCause().getMessage(), startsWith("Parameter [query_string] is missing"));
+        }
+
+        // fails when params is null and the DETECT_MISSING_PARAMS_OPTION option is set to true.
+        {
+            String source = "{\"match\": { \"field\": \"{{query_string}}\" }";
+            TemplateScript.Factory compiled = qe.compile(null, source, TemplateScript.CONTEXT, scriptOptions);
+            GeneralScriptException e = expectThrows(GeneralScriptException.class, () -> compiled.newInstance(null).execute());
+            assertThat(e.getRootCause(), instanceOf(MustacheInvalidParameterException.class));
+            assertThat(e.getRootCause().getMessage(), startsWith("Parameter [query_string] is missing"));
+        }
+
+        // works as expected when params are specified and the DETECT_MISSING_PARAMS_OPTION option is set to true
+        {
+            String source = "{\"match\": { \"field\": \"{{query_string}}\" }";
+            TemplateScript.Factory compiled = qe.compile(null, source, TemplateScript.CONTEXT, scriptOptions);
+            Map<String, Object> params = Map.ofEntries(Map.entry("query_string", "foo"));
+            assertThat(compiled.newInstance(params).execute(), equalTo("{\"match\": { \"field\": \"foo\" }"));
+        }
+
+        // do not throw when using a missing param in the conditional when DETECT_MISSING_PARAMS_OPTION option is set to true
+        {
+            String source = "{\"match\": { \"field\": \"{{#query_string}}{{.}}{{/query_string}}\" }";
+            TemplateScript.Factory compiled = qe.compile(null, source, TemplateScript.CONTEXT, scriptOptions);
+            Map<String, Object> params = Map.of();
+            assertThat(compiled.newInstance(params).execute(), equalTo("{\"match\": { \"field\": \"\" }"));
+        }
+    }
+
+    public void testMissingParam() {
+        Map<String, String> scriptOptions = Collections.emptyMap();
+        String source = "{\"match\": { \"field\": \"{{query_string}}\" }";
+        TemplateScript.Factory compiled = qe.compile(null, source, TemplateScript.CONTEXT, scriptOptions);
+
+        // When the DETECT_MISSING_PARAMS_OPTION is not specified, missing variable is replaced with an empty string.
+        assertThat(compiled.newInstance(Collections.emptyMap()).execute(), equalTo("{\"match\": { \"field\": \"\" }"));
+        assertThat(compiled.newInstance(null).execute(), equalTo("{\"match\": { \"field\": \"\" }"));
     }
 
     public void testParseTemplateAsSingleStringWithConditionalClause() throws IOException {
@@ -157,9 +260,77 @@ public class MustacheScriptEngineTests extends ESTestCase {
             }""";
         XContentParser parser = createParser(JsonXContent.jsonXContent, templateString);
         Script script = Script.parse(parser);
-        TemplateScript.Factory compiled = qe.compile(null, script.getIdOrCode(), TemplateScript.CONTEXT, Collections.emptyMap());
+        TemplateScript.Factory compiled = qe.compile(null, script.getIdOrCode(), TemplateScript.CONTEXT, Map.of());
         TemplateScript TemplateScript = compiled.newInstance(script.getParams());
         assertThat(TemplateScript.execute(), equalTo("{ \"match_all\":{} }"));
+    }
+
+    private static class TestReflection {
+
+        private final int privateField = 1;
+
+        public final int publicField = 2;
+
+        private int getPrivateMethod() {
+            return 3;
+        }
+
+        public int getPublicMethod() {
+            return 4;
+        }
+
+        @Override
+        public String toString() {
+            return List.of(privateField, publicField, getPrivateMethod(), getPublicMethod()).toString();
+        }
+    }
+
+    /**
+     * BWC test for some odd reflection edge-cases. It's not really expected that customer code would be exercising this,
+     * but maybe it's out there! Who knows!?
+     *
+     * If we change this, we should *know* that we're changing it.
+     */
+    @SuppressWarnings({ "deprecation", "removal" })
+    public void testReflection() {
+        Map<String, Object> vars = Map.of("obj", new TestReflection());
+
+        {
+            // non-reflective access calls toString
+            String templateString = "{{obj}}";
+            String o = qe.compile(null, templateString, TemplateScript.CONTEXT, Map.of()).newInstance(vars).execute();
+            assertThat(o, equalTo("[1, 2, 3, 4]"));
+        }
+        {
+            // accessing a field/method that *doesn't* exist will give an empty result
+            String templateString = "{{obj.missing}}";
+            String o = qe.compile(null, templateString, TemplateScript.CONTEXT, Map.of()).newInstance(vars).execute();
+            assertThat(o, equalTo(""));
+        }
+        {
+            // accessing a private field that does exist will give an empty result
+            String templateString = "{{obj.privateField}}";
+            String o = qe.compile(null, templateString, TemplateScript.CONTEXT, Map.of()).newInstance(vars).execute();
+            assertThat(o, equalTo(""));
+        }
+        {
+            // accessing a private method that does exist will give an empty result
+            String templateString = "{{obj.privateMethod}}";
+            String o = qe.compile(null, templateString, TemplateScript.CONTEXT, Map.of()).newInstance(vars).execute();
+            assertThat(o, equalTo(""));
+        }
+        {
+            // accessing a public field that does exist will give an empty result
+            String templateString = "{{obj.publicField}}";
+            String o = qe.compile(null, templateString, TemplateScript.CONTEXT, Map.of()).newInstance(vars).execute();
+            assertThat(o, equalTo(""));
+        }
+        {
+            // accessing a public method that does exist will give an empty result
+            String templateString = "{{obj.publicMethod}}";
+            String o = qe.compile(null, templateString, TemplateScript.CONTEXT, Map.of()).newInstance(vars).execute();
+            assertThat(o, equalTo(""));
+        }
     }
 
     public void testEscapeJson() throws IOException {
