@@ -10,7 +10,6 @@ package org.elasticsearch.search.fetch.subphase.highlight;
 import org.apache.lucene.search.highlight.DefaultEncoder;
 import org.apache.lucene.search.highlight.Encoder;
 import org.apache.lucene.search.highlight.SimpleHTMLEncoder;
-import org.elasticsearch.index.fieldvisitor.CustomFieldsVisitor;
 import org.elasticsearch.index.mapper.MappedFieldType;
 import org.elasticsearch.index.mapper.ValueFetcher;
 import org.elasticsearch.index.query.SearchExecutionContext;
@@ -18,11 +17,7 @@ import org.elasticsearch.search.fetch.FetchSubPhase;
 
 import java.io.IOException;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
-import java.util.Objects;
-
-import static java.util.Collections.singleton;
 
 public final class HighlightUtils {
 
@@ -40,18 +35,15 @@ public final class HighlightUtils {
     public static List<Object> loadFieldValues(
         MappedFieldType fieldType,
         SearchExecutionContext searchContext,
-        FetchSubPhase.HitContext hitContext,
-        boolean forceSource
+        FetchSubPhase.HitContext hitContext
     ) throws IOException {
-        if (forceSource == false && fieldType.isStored()) {
-            CustomFieldsVisitor fieldVisitor = new CustomFieldsVisitor(singleton(fieldType.name()), false);
-            hitContext.reader().document(hitContext.docId(), fieldVisitor);
-            List<Object> textsToHighlight = fieldVisitor.fields().get(fieldType.name());
-            return Objects.requireNonNullElse(textsToHighlight, Collections.emptyList());
+        if (fieldType.isStored()) {
+            List<Object> values = hitContext.loadedFields().get(fieldType.name());
+            return values == null ? List.of() : values;
         }
         ValueFetcher fetcher = fieldType.valueFetcher(searchContext, null);
         fetcher.setNextReader(hitContext.readerContext());
-        return fetcher.fetchValues(hitContext.sourceLookup(), new ArrayList<Object>());
+        return fetcher.fetchValues(hitContext.source(), hitContext.docId(), new ArrayList<>());
     }
 
     public static class Encoders {
