@@ -8,10 +8,10 @@
 
 package org.elasticsearch.common.util;
 
+import org.elasticsearch.common.collect.Iterators;
 import org.elasticsearch.test.ESTestCase;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.Comparator;
 import java.util.HashMap;
@@ -19,9 +19,10 @@ import java.util.HashSet;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 
-import static java.util.Collections.emptyMap;
 import static org.elasticsearch.common.util.CollectionUtils.eagerPartition;
+import static org.elasticsearch.common.util.CollectionUtils.ensureNoSelfReferences;
 import static org.elasticsearch.common.util.CollectionUtils.limitSize;
 import static org.hamcrest.Matchers.containsString;
 import static org.hamcrest.Matchers.equalTo;
@@ -29,7 +30,7 @@ import static org.hamcrest.Matchers.lessThan;
 
 public class CollectionUtilsTests extends ESTestCase {
     public void testRotateEmpty() {
-        assertTrue(CollectionUtils.rotate(Collections.emptyList(), randomInt()).isEmpty());
+        assertTrue(CollectionUtils.rotate(List.of(), randomInt()).isEmpty());
     }
 
     public void testRotate() {
@@ -77,59 +78,109 @@ public class CollectionUtilsTests extends ESTestCase {
     }
 
     public void testEmptyPartition() {
-        assertEquals(Collections.emptyList(), eagerPartition(Collections.emptyList(), 1));
+        assertEquals(List.of(), eagerPartition(List.of(), 1));
     }
 
     public void testSimplePartition() {
-        assertEquals(
-            Arrays.asList(Arrays.asList(1, 2), Arrays.asList(3, 4), Arrays.asList(5)),
-            eagerPartition(Arrays.asList(1, 2, 3, 4, 5), 2)
-        );
+        assertEquals(List.of(List.of(1, 2), List.of(3, 4), List.of(5)), eagerPartition(List.of(1, 2, 3, 4, 5), 2));
     }
 
     public void testSingletonPartition() {
-        assertEquals(
-            Arrays.asList(Arrays.asList(1), Arrays.asList(2), Arrays.asList(3), Arrays.asList(4), Arrays.asList(5)),
-            eagerPartition(Arrays.asList(1, 2, 3, 4, 5), 1)
-        );
+        assertEquals(List.of(List.of(1), List.of(2), List.of(3), List.of(4), List.of(5)), eagerPartition(List.of(1, 2, 3, 4, 5), 1));
     }
 
     public void testOversizedPartition() {
-        assertEquals(Arrays.asList(Arrays.asList(1, 2, 3, 4, 5)), eagerPartition(Arrays.asList(1, 2, 3, 4, 5), 15));
+        assertEquals(List.of(List.of(1, 2, 3, 4, 5)), eagerPartition(List.of(1, 2, 3, 4, 5), 15));
     }
 
     public void testPerfectPartition() {
         assertEquals(
-            Arrays.asList(Arrays.asList(1, 2, 3, 4, 5, 6), Arrays.asList(7, 8, 9, 10, 11, 12)),
-            eagerPartition(Arrays.asList(1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12), 6)
+            List.of(List.of(1, 2, 3, 4, 5, 6), List.of(7, 8, 9, 10, 11, 12)),
+            eagerPartition(List.of(1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12), 6)
         );
     }
 
     public void testEnsureNoSelfReferences() {
-        CollectionUtils.ensureNoSelfReferences(emptyMap(), "test with empty map");
-        CollectionUtils.ensureNoSelfReferences(null, "test with null");
+        ensureNoSelfReferences("string", "test with a string");
+        ensureNoSelfReferences(2, "test with a number");
+        ensureNoSelfReferences(true, "test with a boolean");
+        ensureNoSelfReferences(Map.of(), "test with an empty map");
+        ensureNoSelfReferences(Set.of(), "test with an empty set");
+        ensureNoSelfReferences(List.of(), "test with an empty list");
+        ensureNoSelfReferences(new Object[0], "test with an empty array");
+        ensureNoSelfReferences((Iterable<?>) Collections::emptyIterator, "test with an empty iterable");
+    }
 
+    public void testEnsureNoSelfReferencesMap() {
+        // map value
         {
             Map<String, Object> map = new HashMap<>();
             map.put("field", map);
 
             IllegalArgumentException e = expectThrows(
                 IllegalArgumentException.class,
-                () -> CollectionUtils.ensureNoSelfReferences(map, "test with self ref value")
+                () -> ensureNoSelfReferences(map, "test with self ref value")
             );
             assertThat(e.getMessage(), containsString("Iterable object is self-referencing itself (test with self ref value)"));
         }
+        // map key
         {
             Map<Object, Object> map = new HashMap<>();
             map.put(map, 1);
 
             IllegalArgumentException e = expectThrows(
                 IllegalArgumentException.class,
-                () -> CollectionUtils.ensureNoSelfReferences(map, "test with self ref key")
+                () -> ensureNoSelfReferences(map, "test with self ref key")
             );
             assertThat(e.getMessage(), containsString("Iterable object is self-referencing itself (test with self ref key)"));
         }
+        // nested map value
+        {
+            Map<String, Object> map = new HashMap<>();
+            map.put("field", Set.of(List.of((Iterable<?>) () -> Iterators.single(new Object[] { map }))));
 
+            IllegalArgumentException e = expectThrows(
+                IllegalArgumentException.class,
+                () -> ensureNoSelfReferences(map, "test with self ref nested value")
+            );
+            assertThat(e.getMessage(), containsString("Iterable object is self-referencing itself (test with self ref nested value)"));
+        }
+    }
+
+    public void testEnsureNoSelfReferencesSet() {
+        Set<Object> set = new HashSet<>();
+        set.add("foo");
+        set.add(set);
+
+        IllegalArgumentException e = expectThrows(
+            IllegalArgumentException.class,
+            () -> ensureNoSelfReferences(set, "test with self ref set")
+        );
+        assertThat(e.getMessage(), containsString("Iterable object is self-referencing itself (test with self ref set)"));
+    }
+
+    public void testEnsureNoSelfReferencesList() {
+        List<Object> list = new ArrayList<>();
+        list.add("foo");
+        list.add(list);
+
+        IllegalArgumentException e = expectThrows(
+            IllegalArgumentException.class,
+            () -> ensureNoSelfReferences(list, "test with self ref list")
+        );
+        assertThat(e.getMessage(), containsString("Iterable object is self-referencing itself (test with self ref list)"));
+    }
+
+    public void testEnsureNoSelfReferencesArray() {
+        Object[] array = new Object[2];
+        array[0] = "foo";
+        array[1] = array;
+
+        IllegalArgumentException e = expectThrows(
+            IllegalArgumentException.class,
+            () -> ensureNoSelfReferences(array, "test with self ref array")
+        );
+        assertThat(e.getMessage(), containsString("Iterable object is self-referencing itself (test with self ref array)"));
     }
 
     public void testLimitSizeOfShortList() {
