@@ -16,25 +16,48 @@ import java.nio.charset.StandardCharsets;
 import java.time.ZonedDateTime;
 import java.time.format.DateTimeFormatter;
 import java.util.Arrays;
+import java.util.Locale;
 import java.util.Map;
-import java.util.Objects;
 import java.util.stream.Collectors;
 
 public class S3HttpFixtureWithSTS extends S3HttpFixture {
 
     private static final String ROLE_ARN = "arn:aws:iam::123456789012:role/FederatedWebIdentityRole";
     private static final String ROLE_NAME = "sts-fixture-test";
+    private final String sessionToken;
+    private final String webIdentityToken;
 
-    private S3HttpFixtureWithSTS(final String[] args) throws Exception {
-        super(args);
+    public S3HttpFixtureWithSTS() {
+        this(true);
+    }
+
+    public S3HttpFixtureWithSTS(boolean enabled) {
+        this(
+            enabled,
+            "sts_bucket",
+            "sts_base_path",
+            "sts_access_key",
+            "sts_session_token",
+            "Atza|IQEBLjAsAhRFiXuWpUXuRvQ9PZL3GMFcYevydwIUFAHZwXZXXXXXXXXJnrulxKDHwy87oGKPznh0D6bEQZTSCzyoCtL_8S07pLpr0zMbn6w1lfVZKNTBdDansFBmtGnIsIapjI6xKR02Yc_2bQ8LZbUXSGm6Ry6_BG7PrtLZtj_dfCTj92xNGed-CrKqjG7nPBjNIL016GGvuS5gSvPRUxWES3VYfm1wl7WTI7jn-Pcb6M-buCgHhFOzTQxod27L9CqnOLio7N3gZAGpsp6n1-AJBOCJckcyXe2c6uD0srOJeZlKUm2eTDVMf8IehDVI0r1QOnTV6KzzAI3OY87Vd_cVMQ"
+        );
+    }
+
+    public S3HttpFixtureWithSTS(
+        boolean enabled,
+        String bucket,
+        String basePath,
+        String accessKey,
+        String sessionToken,
+        String webIdentityToken
+    ) {
+        super(enabled, bucket, basePath, accessKey);
+        this.sessionToken = sessionToken;
+        this.webIdentityToken = webIdentityToken;
     }
 
     @Override
-    protected HttpHandler createHandler(final String[] args) {
-        String accessKey = Objects.requireNonNull(args[4]);
-        String sessionToken = Objects.requireNonNull(args[5], "session token is missing");
-        String webIdentityToken = Objects.requireNonNull(args[6], "web identity token is missing");
-        final HttpHandler delegate = super.createHandler(args);
+    protected HttpHandler createHandler() {
+        final HttpHandler delegate = super.createHandler();
 
         return exchange -> {
             // https://docs.aws.amazon.com/STS/latest/APIReference/API_AssumeRoleWithWebIdentity.html
@@ -58,28 +81,30 @@ public class S3HttpFixtureWithSTS extends S3HttpFixture {
                     exchange.close();
                     return;
                 }
-                final byte[] response = """
-                    <AssumeRoleWithWebIdentityResponse xmlns="https://sts.amazonaws.com/doc/2011-06-15/">
-                      <AssumeRoleWithWebIdentityResult>
-                        <SubjectFromWebIdentityToken>amzn1.account.AF6RHO7KZU5XRVQJGXK6HB56KR2A</SubjectFromWebIdentityToken>
-                        <Audience>client.5498841531868486423.1548@apps.example.com</Audience>
-                        <AssumedRoleUser>
-                          <Arn>%s</Arn>
-                          <AssumedRoleId>AROACLKWSDQRAOEXAMPLE:%s</AssumedRoleId>
-                        </AssumedRoleUser>
-                        <Credentials>
-                          <SessionToken>%s</SessionToken>
-                          <SecretAccessKey>secret_access_key</SecretAccessKey>
-                          <Expiration>%s</Expiration>
-                          <AccessKeyId>%s</AccessKeyId>
-                        </Credentials>
-                        <SourceIdentity>SourceIdentityValue</SourceIdentity>
-                        <Provider>www.amazon.com</Provider>
-                      </AssumeRoleWithWebIdentityResult>
-                      <ResponseMetadata>
-                        <RequestId>ad4156e9-bce1-11e2-82e6-6b6efEXAMPLE</RequestId>
-                      </ResponseMetadata>
-                    </AssumeRoleWithWebIdentityResponse>""".formatted(
+                final byte[] response = String.format(
+                    Locale.ROOT,
+                    """
+                        <AssumeRoleWithWebIdentityResponse xmlns="https://sts.amazonaws.com/doc/2011-06-15/">
+                          <AssumeRoleWithWebIdentityResult>
+                            <SubjectFromWebIdentityToken>amzn1.account.AF6RHO7KZU5XRVQJGXK6HB56KR2A</SubjectFromWebIdentityToken>
+                            <Audience>client.5498841531868486423.1548@apps.example.com</Audience>
+                            <AssumedRoleUser>
+                              <Arn>%s</Arn>
+                              <AssumedRoleId>AROACLKWSDQRAOEXAMPLE:%s</AssumedRoleId>
+                            </AssumedRoleUser>
+                            <Credentials>
+                              <SessionToken>%s</SessionToken>
+                              <SecretAccessKey>secret_access_key</SecretAccessKey>
+                              <Expiration>%s</Expiration>
+                              <AccessKeyId>%s</AccessKeyId>
+                            </Credentials>
+                            <SourceIdentity>SourceIdentityValue</SourceIdentity>
+                            <Provider>www.amazon.com</Provider>
+                          </AssumeRoleWithWebIdentityResult>
+                          <ResponseMetadata>
+                            <RequestId>ad4156e9-bce1-11e2-82e6-6b6efEXAMPLE</RequestId>
+                          </ResponseMetadata>
+                        </AssumeRoleWithWebIdentityResponse>""",
                     ROLE_ARN,
                     ROLE_NAME,
                     sessionToken,
@@ -94,15 +119,5 @@ public class S3HttpFixtureWithSTS extends S3HttpFixture {
             }
             delegate.handle(exchange);
         };
-    }
-
-    public static void main(final String[] args) throws Exception {
-        if (args == null || args.length < 7) {
-            throw new IllegalArgumentException(
-                "S3HttpFixtureWithSTS expects 7 arguments [address, port, bucket, base path, sts access id, sts session token, web identity token]"
-            );
-        }
-        final S3HttpFixtureWithSTS fixture = new S3HttpFixtureWithSTS(args);
-        fixture.start();
     }
 }
