@@ -13,7 +13,8 @@ import org.apache.lucene.search.DisjunctionMaxQuery;
 import org.apache.lucene.search.MatchNoDocsQuery;
 import org.apache.lucene.search.Query;
 import org.apache.lucene.util.NumericUtils;
-import org.elasticsearch.Version;
+import org.elasticsearch.TransportVersion;
+import org.elasticsearch.TransportVersions;
 import org.elasticsearch.common.ParsingException;
 import org.elasticsearch.common.Strings;
 import org.elasticsearch.common.io.stream.StreamInput;
@@ -30,7 +31,6 @@ import org.elasticsearch.xcontent.ConstructingObjectParser;
 import org.elasticsearch.xcontent.ParseField;
 import org.elasticsearch.xcontent.ToXContentObject;
 import org.elasticsearch.xcontent.XContentBuilder;
-import org.elasticsearch.xcontent.XContentFactory;
 import org.elasticsearch.xcontent.XContentParser;
 
 import java.io.IOException;
@@ -40,7 +40,6 @@ import java.util.Collections;
 import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 import static org.elasticsearch.xcontent.ConstructingObjectParser.constructorArg;
 import static org.elasticsearch.xcontent.ConstructingObjectParser.optionalConstructorArg;
@@ -54,9 +53,11 @@ public class PinnedQueryBuilder extends AbstractQueryBuilder<PinnedQueryBuilder>
     public static final String NAME = "pinned";
     public static final int MAX_NUM_PINNED_HITS = 100;
 
-    private static final ParseField IDS_FIELD = new ParseField("ids");
-    private static final ParseField DOCS_FIELD = new ParseField("docs");
+    public static final ParseField IDS_FIELD = new ParseField("ids");
+    public static final ParseField DOCS_FIELD = new ParseField("docs");
     public static final ParseField ORGANIC_QUERY_FIELD = new ParseField("organic");
+
+    private static final TransportVersion OPTIONAL_INDEX_IN_DOCS_VERSION = TransportVersions.PINNED_QUERY_OPTIONAL_INDEX;
 
     private final List<String> ids;
     private final List<Item> docs;
@@ -72,8 +73,8 @@ public class PinnedQueryBuilder extends AbstractQueryBuilder<PinnedQueryBuilder>
     public static final class Item implements ToXContentObject, Writeable {
         public static final String NAME = "item";
 
-        private static final ParseField INDEX_FIELD = new ParseField("_index");
-        private static final ParseField ID_FIELD = new ParseField("_id");
+        public static final ParseField INDEX_FIELD = new ParseField("_index");
+        public static final ParseField ID_FIELD = new ParseField("_id");
 
         private final String index;
         private final String id;
@@ -85,10 +86,7 @@ public class PinnedQueryBuilder extends AbstractQueryBuilder<PinnedQueryBuilder>
          * @param id and its id
          */
         public Item(String index, String id) {
-            if (index == null) {
-                throw new IllegalArgumentException("Item requires index to be non-null");
-            }
-            if (Regex.isSimpleMatchPattern(index)) {
+            if (index != null && Regex.isSimpleMatchPattern(index)) {
                 throw new IllegalArgumentException("Item index cannot contain wildcard expressions");
             }
             if (id == null) {
@@ -106,21 +104,36 @@ public class PinnedQueryBuilder extends AbstractQueryBuilder<PinnedQueryBuilder>
         /**
          * Read from a stream.
          */
-        Item(StreamInput in) throws IOException {
-            index = in.readString();
+        public Item(StreamInput in) throws IOException {
+            if (in.getTransportVersion().onOrAfter(OPTIONAL_INDEX_IN_DOCS_VERSION)) {
+                index = in.readOptionalString();
+            } else {
+                index = in.readString();
+            }
             id = in.readString();
         }
 
         @Override
         public void writeTo(StreamOutput out) throws IOException {
-            out.writeString(index);
+            if (out.getTransportVersion().onOrAfter(OPTIONAL_INDEX_IN_DOCS_VERSION)) {
+                out.writeOptionalString(index);
+            } else {
+                if (index == null) {
+                    throw new IllegalArgumentException(
+                        "[_index] needs to be specified for docs elements when cluster nodes are not in the same version"
+                    );
+                }
+                out.writeString(index);
+            }
             out.writeString(id);
         }
 
         @Override
         public XContentBuilder toXContent(XContentBuilder builder, Params params) throws IOException {
             builder.startObject();
-            builder.field(INDEX_FIELD.getPreferredName(), this.index);
+            if (this.index != null) {
+                builder.field(INDEX_FIELD.getPreferredName(), this.index);
+            }
             builder.field(ID_FIELD.getPreferredName(), this.id);
             return builder.endObject();
         }
@@ -131,20 +144,13 @@ public class PinnedQueryBuilder extends AbstractQueryBuilder<PinnedQueryBuilder>
         );
 
         static {
-            PARSER.declareString(constructorArg(), INDEX_FIELD);
+            PARSER.declareString(optionalConstructorArg(), INDEX_FIELD);
             PARSER.declareString(constructorArg(), ID_FIELD);
         }
 
         @Override
         public String toString() {
-            try {
-                XContentBuilder builder = XContentFactory.jsonBuilder();
-                builder.prettyPrint();
-                toXContent(builder, EMPTY_PARAMS);
-                return Strings.toString(builder);
-            } catch (Exception e) {
-                throw new RuntimeException(e);
-            }
+            return Strings.toString(this, true, true);
         }
 
         @Override
@@ -228,19 +234,19 @@ public class PinnedQueryBuilder extends AbstractQueryBuilder<PinnedQueryBuilder>
      */
     public PinnedQueryBuilder(StreamInput in) throws IOException {
         super(in);
-        if (in.getVersion().before(Version.V_7_15_0)) {
-            ids = in.readStringList();
+        if (in.getTransportVersion().before(TransportVersions.V_7_15_0)) {
+            ids = in.readStringCollectionAsList();
             docs = null;
         } else {
-            ids = in.readOptionalStringList();
-            docs = in.readBoolean() ? in.readList(Item::new) : null;
+            ids = in.readOptionalStringCollectionAsList();
+            docs = in.readBoolean() ? in.readCollectionAsList(Item::new) : null;
         }
         organicQuery = in.readNamedWriteable(QueryBuilder.class);
     }
 
     @Override
     protected void doWriteTo(StreamOutput out) throws IOException {
-        if (out.getVersion().before(Version.V_7_15_0)) {
+        if (out.getTransportVersion().before(TransportVersions.V_7_15_0)) {
             out.writeStringCollection(this.ids);
         } else {
             out.writeOptionalStringCollection(this.ids);
@@ -248,7 +254,7 @@ public class PinnedQueryBuilder extends AbstractQueryBuilder<PinnedQueryBuilder>
                 out.writeBoolean(false);
             } else {
                 out.writeBoolean(true);
-                out.writeList(docs);
+                out.writeCollection(docs);
             }
         }
         out.writeNamedWriteable(organicQuery);
@@ -302,7 +308,7 @@ public class PinnedQueryBuilder extends AbstractQueryBuilder<PinnedQueryBuilder>
             }
             builder.endArray();
         }
-        printBoostAndQueryName(builder);
+        boostAndQueryNameToXContent(builder);
         builder.endObject();
     }
 
@@ -351,7 +357,7 @@ public class PinnedQueryBuilder extends AbstractQueryBuilder<PinnedQueryBuilder>
         if (idField == null) {
             return new MatchNoDocsQuery("No mappings");
         }
-        List<Item> items = (docs != null) ? docs : ids.stream().map(id -> new Item(id)).collect(Collectors.toList());
+        List<Item> items = (docs != null) ? docs : ids.stream().map(id -> new Item(id)).toList();
         if (items.isEmpty()) {
             return new CappedScoreQuery(organicQuery.toQuery(context), MAX_ORGANIC_SCORE);
         } else {
@@ -398,7 +404,7 @@ public class PinnedQueryBuilder extends AbstractQueryBuilder<PinnedQueryBuilder>
     }
 
     @Override
-    public Version getMinimalSupportedVersion() {
-        return Version.V_7_4_0;
+    public TransportVersion getMinimalSupportedVersion() {
+        return TransportVersions.V_7_4_0;
     }
 }
