@@ -15,19 +15,25 @@ import org.elasticsearch.action.ActionListener;
 import org.elasticsearch.action.FailedNodeException;
 import org.elasticsearch.action.TaskOperationFailure;
 import org.elasticsearch.action.support.ActionFilters;
+import org.elasticsearch.action.support.master.AcknowledgedRequest;
+import org.elasticsearch.action.support.tasks.BaseTasksResponse;
 import org.elasticsearch.action.support.tasks.TransportTasksAction;
 import org.elasticsearch.client.internal.Client;
+import org.elasticsearch.client.internal.ParentTaskAssigningClient;
 import org.elasticsearch.cluster.ClusterState;
 import org.elasticsearch.cluster.service.ClusterService;
 import org.elasticsearch.common.Strings;
 import org.elasticsearch.common.inject.Inject;
 import org.elasticsearch.common.settings.Settings;
+import org.elasticsearch.common.util.concurrent.EsExecutors;
 import org.elasticsearch.core.Nullable;
+import org.elasticsearch.core.TimeValue;
 import org.elasticsearch.index.IndexNotFoundException;
 import org.elasticsearch.persistent.PersistentTasksCustomMetadata;
 import org.elasticsearch.persistent.PersistentTasksCustomMetadata.Assignment;
+import org.elasticsearch.tasks.CancellableTask;
 import org.elasticsearch.tasks.Task;
-import org.elasticsearch.threadpool.ThreadPool;
+import org.elasticsearch.tasks.TaskId;
 import org.elasticsearch.transport.TransportService;
 import org.elasticsearch.xpack.core.transform.action.GetTransformStatsAction;
 import org.elasticsearch.xpack.core.transform.action.GetTransformStatsAction.Request;
@@ -40,6 +46,7 @@ import org.elasticsearch.xpack.core.transform.transforms.TransformStoredDoc;
 import org.elasticsearch.xpack.transform.TransformServices;
 import org.elasticsearch.xpack.transform.checkpoint.TransformCheckpointService;
 import org.elasticsearch.xpack.transform.persistence.TransformConfigManager;
+import org.elasticsearch.xpack.transform.transforms.TransformHealthChecker;
 import org.elasticsearch.xpack.transform.transforms.TransformNodeAssignments;
 import org.elasticsearch.xpack.transform.transforms.TransformNodes;
 import org.elasticsearch.xpack.transform.transforms.TransformTask;
@@ -57,6 +64,9 @@ import java.util.stream.Collectors;
 public class TransportGetTransformStatsAction extends TransportTasksAction<TransformTask, Request, Response, Response> {
 
     private static final Logger logger = LogManager.getLogger(TransportGetTransformStatsAction.class);
+
+    // default timeout share to receive checkpoint info, with the default of 30s: 30s * 0.8 = 24s
+    private static final double CHECKPOINT_INFO_TIMEOUT_SHARE = 0.8;
 
     private final TransformConfigManager transformConfigManager;
     private final TransformCheckpointService transformCheckpointService;
@@ -80,7 +90,7 @@ public class TransportGetTransformStatsAction extends TransportTasksAction<Trans
             Request::new,
             Response::new,
             Response::new,
-            ThreadPool.Names.SAME
+            EsExecutors.DIRECT_EXECUTOR_SERVICE
         );
         this.transformConfigManager = transformServices.getConfigManager();
         this.transformCheckpointService = transformServices.getCheckpointService();
@@ -98,50 +108,70 @@ public class TransportGetTransformStatsAction extends TransportTasksAction<Trans
         List<TransformStats> responses = tasks.stream()
             .flatMap(r -> r.getTransformsStats().stream())
             .sorted(Comparator.comparing(TransformStats::getId))
-            .collect(Collectors.toList());
+            .toList();
         List<ElasticsearchException> allFailedNodeExceptions = new ArrayList<>(failedNodeExceptions);
-        allFailedNodeExceptions.addAll(tasks.stream().flatMap(r -> r.getNodeFailures().stream()).collect(Collectors.toList()));
+        tasks.stream().map(BaseTasksResponse::getNodeFailures).forEach(allFailedNodeExceptions::addAll);
         return new Response(responses, responses.size(), taskOperationFailures, allFailedNodeExceptions);
     }
 
     @Override
-    protected void taskOperation(Request request, TransformTask task, ActionListener<Response> listener) {
-        // Little extra insurance, make sure we only return transforms that aren't cancelled
-        ClusterState state = clusterService.state();
-        String nodeId = state.nodes().getLocalNode().getId();
-        if (task.isCancelled() == false) {
-            task.getCheckpointingInfo(
-                transformCheckpointService,
-                ActionListener.wrap(
-                    checkpointingInfo -> listener.onResponse(
-                        new Response(Collections.singletonList(deriveStats(task, checkpointingInfo)), 1L)
-                    ),
-                    e -> {
-                        logger.warn("Failed to retrieve checkpointing info for transform [" + task.getTransformId() + "]", e);
-                        listener.onResponse(
-                            new Response(
-                                Collections.singletonList(deriveStats(task, null)),
-                                1L,
-                                Collections.emptyList(),
-                                Collections.singletonList(new FailedNodeException(nodeId, "Failed to retrieve checkpointing info", e))
-                            )
-                        );
-                    }
-                )
-            );
-        } else {
-            listener.onResponse(new Response(Collections.emptyList(), 0L));
+    protected void taskOperation(
+        CancellableTask actionTask,
+        Request request,
+        TransformTask transformTask,
+        ActionListener<Response> listener
+    ) {
+        ClusterState clusterState = clusterService.state();
+        String nodeId = clusterState.nodes().getLocalNode().getId();
+        final TaskId parentTaskId = new TaskId(nodeId, actionTask.getId());
+
+        // If the _stats request is cancelled there is no point in continuing this work on the task level
+        if (actionTask.notifyIfCancelled(listener)) {
+            return;
         }
+        // Little extra insurance, make sure we only return transforms that aren't cancelled
+        if (transformTask.isCancelled()) {
+            listener.onResponse(new Response(Collections.emptyList()));
+            return;
+        }
+        transformTask.getCheckpointingInfo(
+            transformCheckpointService,
+            new ParentTaskAssigningClient(client, parentTaskId),
+            ActionListener.wrap(
+                checkpointingInfo -> listener.onResponse(
+                    new Response(Collections.singletonList(deriveStats(transformTask, checkpointingInfo)))
+                ),
+                e -> {
+                    logger.warn("Failed to retrieve checkpointing info for transform [" + transformTask.getTransformId() + "]", e);
+                    listener.onResponse(
+                        new Response(
+                            Collections.singletonList(deriveStats(transformTask, null)),
+                            1L,
+                            Collections.emptyList(),
+                            Collections.singletonList(new FailedNodeException(nodeId, "Failed to retrieve checkpointing info", e))
+                        )
+                    );
+                }
+            ),
+            // at this point the transport already spend some time budget in `doExecute`, it is hard to tell what is left:
+            // recording the time spend would be complex and crosses machine boundaries, that's why we use a heuristic here
+            TimeValue.timeValueMillis(
+                (long) ((request.getTimeout() != null ? request.getTimeout().millis() : AcknowledgedRequest.DEFAULT_ACK_TIMEOUT.millis())
+                    * CHECKPOINT_INFO_TIMEOUT_SHARE)
+            )
+        );
     }
 
     @Override
     protected void doExecute(Task task, Request request, ActionListener<Response> finalListener) {
+        final TaskId parentTaskId = new TaskId(clusterService.localNode().getId(), task.getId());
         final ClusterState clusterState = clusterService.state();
         TransformNodes.warnIfNoTransformNodes(clusterState);
 
         transformConfigManager.expandTransformIds(
             request.getId(),
             request.getPageParams(),
+            request.getTimeout(),
             request.isAllowNoMatch(),
             ActionListener.wrap(hitsAndIds -> {
                 boolean hasAnyTransformNode = TransformNodes.hasAnyTransformNode(clusterState.getNodes());
@@ -173,6 +203,7 @@ public class TransportGetTransformStatsAction extends TransportTasksAction<Trans
                         response.getTransformsStats().forEach(dtsasi -> setNodeAttributes(dtsasi, tasksInProgress, clusterState));
                     }
                     collectStatsForTransformsWithoutTasks(
+                        parentTaskId,
                         request,
                         response,
                         transformNodeAssignments.getWaitingForAssignment(),
@@ -195,12 +226,12 @@ public class TransportGetTransformStatsAction extends TransportTasksAction<Trans
                     request.setNodes(transformNodeAssignments.getExecutorNodes().toArray(new String[0]));
                     super.doExecute(task, request, doExecuteListener);
                 } else {
-                    doExecuteListener.onResponse(new Response(Collections.emptyList(), 0L));
+                    doExecuteListener.onResponse(new Response(Collections.emptyList()));
                 }
             }, e -> {
                 // If the index to search, or the individual config is not there, just return empty
                 if (e instanceof ResourceNotFoundException) {
-                    finalListener.onResponse(new Response(Collections.emptyList(), 0L));
+                    finalListener.onResponse(new Response(Collections.emptyList()));
                 } else {
                     finalListener.onFailure(e);
                 }
@@ -211,16 +242,16 @@ public class TransportGetTransformStatsAction extends TransportTasksAction<Trans
     private static void setNodeAttributes(
         TransformStats transformStats,
         PersistentTasksCustomMetadata persistentTasksCustomMetadata,
-        ClusterState state
+        ClusterState clusterState
     ) {
         var pTask = persistentTasksCustomMetadata.getTask(transformStats.getId());
         if (pTask != null) {
-            transformStats.setNode(NodeAttributes.fromDiscoveryNode(state.nodes().get(pTask.getExecutorNode())));
+            transformStats.setNode(NodeAttributes.fromDiscoveryNode(clusterState.nodes().get(pTask.getExecutorNode())));
         }
     }
 
-    static TransformStats deriveStats(TransformTask task, @Nullable TransformCheckpointingInfo checkpointingInfo) {
-        TransformState transformState = task.getState();
+    static TransformStats deriveStats(TransformTask transformTask, @Nullable TransformCheckpointingInfo checkpointingInfo) {
+        TransformState transformState = transformTask.getState();
         TransformStats.State derivedState = TransformStats.State.fromComponents(
             transformState.getTaskState(),
             transformState.getIndexerState()
@@ -233,16 +264,18 @@ public class TransportGetTransformStatsAction extends TransportTasksAction<Trans
             reason = Strings.isNullOrEmpty(reason) ? "transform is set to stop at the next checkpoint" : reason;
         }
         return new TransformStats(
-            task.getTransformId(),
+            transformTask.getTransformId(),
             derivedState,
             reason,
             null,
-            task.getStats(),
-            checkpointingInfo == null ? TransformCheckpointingInfo.EMPTY : checkpointingInfo
+            transformTask.getStats(),
+            checkpointingInfo == null ? TransformCheckpointingInfo.EMPTY : checkpointingInfo,
+            TransformHealthChecker.checkTransform(transformTask, transformState.getAuthState())
         );
     }
 
     private void collectStatsForTransformsWithoutTasks(
+        TaskId parentTaskId,
         Request request,
         Response response,
         Set<String> transformsWaitingForAssignment,
@@ -255,7 +288,7 @@ public class TransportGetTransformStatsAction extends TransportTasksAction<Trans
             return;
         }
         Set<String> transformsWithoutTasks = new HashSet<>(request.getExpandedIds());
-        transformsWithoutTasks.removeAll(response.getTransformsStats().stream().map(TransformStats::getId).collect(Collectors.toList()));
+        response.getTransformsStats().stream().map(TransformStats::getId).forEach(transformsWithoutTasks::remove);
 
         // Small assurance that we are at least below the max. Terms search has a hard limit of 10k, we should at least be below that.
         assert transformsWithoutTasks.size() <= Request.MAX_SIZE_RETURN;
@@ -267,6 +300,8 @@ public class TransportGetTransformStatsAction extends TransportTasksAction<Trans
             // copy the list as it might be immutable
             List<TransformStats> allStateAndStats = new ArrayList<>(response.getTransformsStats());
             addCheckpointingInfoForTransformsWithoutTasks(
+                parentTaskId,
+                request.getTimeout(),
                 allStateAndStats,
                 statsForTransformsWithoutTasks,
                 transformsWaitingForAssignment,
@@ -296,12 +331,18 @@ public class TransportGetTransformStatsAction extends TransportTasksAction<Trans
             }
         });
 
-        transformConfigManager.getTransformStoredDocs(transformsWithoutTasks, searchStatsListener);
+        transformConfigManager.getTransformStoredDocs(transformsWithoutTasks, request.getTimeout(), searchStatsListener);
     }
 
-    private void populateSingleStoppedTransformStat(TransformStoredDoc transform, ActionListener<TransformCheckpointingInfo> listener) {
+    private void populateSingleStoppedTransformStat(
+        TransformStoredDoc transform,
+        TaskId parentTaskId,
+        TimeValue timeout,
+        ActionListener<TransformCheckpointingInfo> listener
+    ) {
         transformCheckpointService.getCheckpointingInfo(
-            client,
+            new ParentTaskAssigningClient(client, parentTaskId),
+            timeout,
             transform.getId(),
             transform.getTransformState().getCheckpoint(),
             transform.getTransformState().getPosition(),
@@ -314,13 +355,14 @@ public class TransportGetTransformStatsAction extends TransportTasksAction<Trans
     }
 
     private void addCheckpointingInfoForTransformsWithoutTasks(
+        TaskId parentTaskId,
+        TimeValue timeout,
         List<TransformStats> allStateAndStats,
         List<TransformStoredDoc> statsForTransformsWithoutTasks,
         Set<String> transformsWaitingForAssignment,
         ClusterState clusterState,
         ActionListener<Void> listener
     ) {
-
         if (statsForTransformsWithoutTasks.isEmpty()) {
             // No work to do, but we must respond to the listener
             listener.onResponse(null);
@@ -330,40 +372,52 @@ public class TransportGetTransformStatsAction extends TransportTasksAction<Trans
         AtomicInteger numberRemaining = new AtomicInteger(statsForTransformsWithoutTasks.size());
         AtomicBoolean isExceptionReported = new AtomicBoolean(false);
 
-        statsForTransformsWithoutTasks.forEach(stat -> populateSingleStoppedTransformStat(stat, ActionListener.wrap(checkpointingInfo -> {
-            synchronized (allStateAndStats) {
-                if (transformsWaitingForAssignment.contains(stat.getId())) {
-                    Assignment assignment = TransformNodes.getAssignment(stat.getId(), clusterState);
-                    allStateAndStats.add(
-                        new TransformStats(
+        statsForTransformsWithoutTasks.forEach(
+            stat -> populateSingleStoppedTransformStat(stat, parentTaskId, timeout, ActionListener.wrap(checkpointingInfo -> {
+                synchronized (allStateAndStats) {
+                    if (transformsWaitingForAssignment.contains(stat.getId())) {
+                        Assignment assignment = TransformNodes.getAssignment(stat.getId(), clusterState);
+                        allStateAndStats.add(
+                            new TransformStats(
+                                stat.getId(),
+                                TransformStats.State.WAITING,
+                                assignment.getExplanation(),
+                                null,
+                                stat.getTransformStats(),
+                                checkpointingInfo,
+                                TransformHealthChecker.checkUnassignedTransform(
+                                    stat.getId(),
+                                    clusterState,
+                                    stat.getTransformState().getAuthState()
+                                )
+                            )
+                        );
+                    } else {
+                        final boolean transformPersistentTaskIsStillRunning = TransformTask.getTransformTask(
                             stat.getId(),
-                            TransformStats.State.WAITING,
-                            assignment.getExplanation(),
-                            null,
-                            stat.getTransformStats(),
-                            checkpointingInfo
-                        )
-                    );
-                } else {
-                    allStateAndStats.add(
-                        new TransformStats(
-                            stat.getId(),
-                            TransformStats.State.STOPPED,
-                            null,
-                            null,
-                            stat.getTransformStats(),
-                            checkpointingInfo
-                        )
-                    );
+                            clusterState
+                        ) != null;
+                        allStateAndStats.add(
+                            new TransformStats(
+                                stat.getId(),
+                                transformPersistentTaskIsStillRunning ? TransformStats.State.STOPPING : TransformStats.State.STOPPED,
+                                null,
+                                null,
+                                stat.getTransformStats(),
+                                checkpointingInfo,
+                                TransformHealthChecker.checkTransform(stat.getTransformState().getAuthState())
+                            )
+                        );
+                    }
                 }
-            }
-            if (numberRemaining.decrementAndGet() == 0) {
-                listener.onResponse(null);
-            }
-        }, e -> {
-            if (isExceptionReported.compareAndSet(false, true)) {
-                listener.onFailure(e);
-            }
-        })));
+                if (numberRemaining.decrementAndGet() == 0) {
+                    listener.onResponse(null);
+                }
+            }, e -> {
+                if (isExceptionReported.compareAndSet(false, true)) {
+                    listener.onFailure(e);
+                }
+            }))
+        );
     }
 }
